2010-03-02  Martin Senger  <martin.senger&#64;gmail.com>

	* Released version 0.52 - uploaded to CPAN

	* Added tests

	* Fixed setting hosts and endpoints

2010-02-22  Martin Senger  <martin.senger&#64;gmail.com>

	* Released version 0.5

2010-02-21  Martin Senger  <martin.senger&#64;gmail.com>

	* Added implementation of methods invoking Blast and Clustal.

2010-02-13  Martin Senger  <martin.senger&#64;gmail.com>

	* Released version 0.01
