@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               MRS-Client
-version:            0.52
+version:            0.53
 abstract:           A SOAP-based client accessing MRS databases
 author:
     - Martin Senger <martin.senger@gmail.com>
